@@ -83,6 +83,5 @@ PSplashFont;
 
 #include "psplash-fb.h"
 #include "psplash-console.h"
-#include "psplash-colors.h"
 
 #endif
